# container-scheduler

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  codex.md  docker-compose.yml
.github/workflows/: ci.yml
proto/: scheduler.proto
src/agent/: health.cpp  health.h  node_agent.cpp  node_agent.h  runtime.cpp  runtime.h
src/cli/: borgctl.cpp
src/common/: model.cpp  model.h  resources.cpp  resources.h
src/control_plane/: api_server.cpp  api_server.h  reconciler.cpp  reconciler.h  scheduler.cpp  scheduler.h  state_store.cpp  state_store.h
src/server/: agent_main.cpp  control_main.cpp
test/: scheduler_test.cpp  sim_test.cpp  test_main.cpp  test_suite.h
